# lispp

./: .clang-format  CMakeLists.txt  README.md
include/: core.h  environment.h  evaluator.h  exception.h  frame.h  interpreter.h  operators.h  printer.h  reader.h  syntax.h  type.h  types.h
src/: .#reader.cpp  CMakeLists.txt  core.cpp  environment.cpp  evaluator.cpp  frame.cpp  interpreter.cpp  main.cpp  operators.cpp  printer.cpp  reader.cpp
tests/: main.cpp
